--- a/application.yml
+++ b/application.yml
@@ -4,6 +4,6 @@ eureka:
   client:
     enabled: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${eureka.instance.hostname}:8761/eureka/
     healthcheck:
       enabled: true
