--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 eureka:
-  instance:
-    hostname: localhost
+#  instance:
+#    hostname: localhost
   client:
     enabled: true
     service-url:
