--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,4 @@
+# Eureka Server & Client Configuration
 eureka:
   instance:
     hostname: localhost
@@ -7,3 +8,10 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:8761/eureka/
     healthcheck:
       enabled: true
+
+# To Enable all endpoints for Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
