--- a/application.yml
+++ b/application.yml
@@ -6,6 +6,8 @@ eureka:
     enabled: true
     service-url:
       defaultZone: http://${eureka.instance.hostname}:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
     healthcheck:
       enabled: true
 
