--- a/Client-ApiGateway.yml
+++ b/Client-ApiGateway.yml
@@ -4,3 +4,8 @@ spring:
     mongodb:
       database: mydb
       uri: mongodb://yanshu:root@localhost:27017/mydb
+
+gateway:
+  authheaderkey: Authorization
+  authserviceuri: http://127.0.0.1:9999/validatetoken
+  bypassendpoints: /swagger-ui.html, /webjars, /swagger-resources, /v2/api-docs, /authenticate, /signup
