--- a/application.yml
+++ b/application.yml
@@ -20,3 +20,10 @@ management:
 
 jwt:
   secret: noonewilleverguess
+
+spring:
+# MongoDB Configuration
+  data:
+    mongodb:
+      database: mydb
+      uri: mongodb://yanshu:root@localhost:27017/mydb
